--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,43 +12,34 @@
     tools:context="com.htech.restaurant.activity.LoginActivity">
 
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/email_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <EditText
-            android:id="@+id/input_email"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:hint="Email Address"
-            android:textColor="@color/accent" />
-    </android.support.design.widget.TextInputLayout>
-
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/password_layout"
+    <android.support.v7.widget.AppCompatEditText
+        android:id="@+id/input_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/email_layout">
+        android:layout_margin="16dp"
+        android:hint="Email Address"
+        style="@style/GreenTextInputLayout"/>
 
-        <EditText
-            android:id="@+id/input_password"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:hint="Password"
-            android:inputType="textPassword"
-            android:textColor="@color/accent" />
-    </android.support.design.widget.TextInputLayout>
+
+    <android.support.v7.widget.AppCompatEditText
+        android:id="@+id/input_password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/input_email"
+        android:layout_margin="16dp"
+        android:hint="Password"
+        android:inputType="textPassword"
+        style="@style/GreenTextInputLayout"/>
+
 
     <Button
         android:id="@+id/activity_login_btnLogin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/password_layout"
+        android:layout_below="@id/input_password"
         android:background="@color/accent"
         android:text="Login"
+        android:layout_margin="16dp"
         android:textColor="@android:color/white" />
 
 </RelativeLayout>
