--- a/app/src/main/res/layout/activity_splashscreen.xml
+++ b/app/src/main/res/layout/activity_splashscreen.xml
@@ -5,6 +5,6 @@
     <ImageView
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:src="@drawable/splash_logo_three"
-        android:scaleType="centerCrop"/>
+        android:src="@drawable/app_logo"
+        android:scaleType="center"/>
 </LinearLayout>
